# Agent-builder-template

./: README.md  pyproject.toml
src/agent_builder_template/: __init__.py  cli.py  generator.py  workspace.py
src/agent_builder_template/templates/workspace/: AGENTS.md  README.md
src/agent_builder_template/templates/workspace/AGENTS/: architect.md  artifact_steward.md  builder.md  critic.md  intake.md  planner.md  regression.md  report.md
src/agent_builder_template/templates/workspace/PROJECT/: ARCHITECTURE.md  DECISIONS.md  DELIVERY_PLAN.md  PROJECT_CONTEXT.md  zz - PROJECT_BRIEF.md  zz - PROJECT_CONTEXT.md
src/agent_builder_template/templates/workspace/REPORTS/: TEMPLATE - REPORT.md
src/agent_builder_template/templates/workspace/STATE/: NEXT_ACTION.md  zz - run_state.json
src/agent_builder_template/templates/workspace/SYSTEM/: APPROVAL_GATES.md  CONTEXT_CAPTURE_GUIDE.md  OPERATING_MODEL.md  QUALITY_BAR.md
src/agent_builder_template/templates/workspace/TASKS/: TEMPLATE - TASK.md  zz - TASK_BRIEF_TEMPLATE.md
tests/: test_generator.py
