[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-builder-template"
version = "0.2.0"
description = "Generate an agent-ready project workspace from a short project brief."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "LuTag99" }
]
license = { text = "MIT" }
keywords = ["agents", "project-template", "scaffold", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators"
]

[project.scripts]
agent-builder = "agent_builder_template.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_builder_template = [
  "templates/workspace/README.md",
  "templates/workspace/AGENTS.md",
  "templates/workspace/SYSTEM/*.md",
  "templates/workspace/AGENTS/*.md",
  "templates/workspace/PROJECT/*",
  "templates/workspace/TASKS/*",
  "templates/workspace/TASKS/BACKLOG/.gitkeep",
  "templates/workspace/TASKS/ACTIVE/.gitkeep",
  "templates/workspace/TASKS/BLOCKED/.gitkeep",
  "templates/workspace/TASKS/DONE/.gitkeep",
  "templates/workspace/STATE/*",
  "templates/workspace/RUNS/.gitkeep",
  "templates/workspace/REPORTS/*"
]
